# MRM_Achint

./: .gitignore
Open CV/: Aruco_detection.py
ROS2/GPS Navigation/include/robot/: global_planner.hpp  gps_coordinate.hpp  rover_state.hpp
ROS2/GPS Navigation/src/: global_planner_node.cpp
ROS2/Model_Rover/: rover.urdf.xacro
Ros2 Task/GP/: obstacle_avoidance.hpp  rover.cpp  rover_launch.launch.py
Ros2 Task/GP/maze traversing/: Rover_mazo.cpp  obstacle_avoidance_maze.hpp
Ros2 Task/GP/obstacle avoidance/: obstacle_avoidance.hpp  rover.cpp
Ros2 Task/cashier_system/: CMakeLists.txt  package.xml
Ros2 Task/cashier_system/src/: bill_generator.cpp  inventory_manager.cpp  status_viewer.cpp
Ros2 Task/robot/: package.xml
Ros2 Task/robot/launch/: rover_launch.launch.py
Ros2 Task/robot/urdf/: rover.urdf.xacro
Ros2 Task/robot/world/: rover_world.world
robot/: CMakeLists.txt
robot/include/robot/: global_planner.hpp  gps_coordinate.hpp  rover_state.hpp
robot/src/: global_planner_node.cpp
